# 3dGameEngine

./: .gitignore  CMakeLists.txt
assets/shaders/: passthrough.fs  passthrough.vs
include/: shader.h  shaderProgram.h
src/: main.cpp  shader.cpp  shaderRunner.cpp
